--- a/index.html
+++ b/index.html
@@ -93,10 +93,7 @@
                         <li><span class="li_img"></span><p>Project</p></li>
                         <li><span class="li_img"></span><p>Contact Me</p></li>
                     </ul>
-
-
                 </div>
-
 
                 <div class="gnb_lower">
                     <div class="gaussian_light">
@@ -165,7 +162,6 @@
             </div>
 
             <div class="main_aboutme" id="main_1">
-
                 <div class="main_h2">
                     <div class="nyan_zone nyan_zone_h2">
                         <div class="title_trace_area">
@@ -215,20 +211,10 @@
                                 </div>
 
                                 <div class="descri_comment">
-                                    <h4>강남 패스트뷰 광고팀 팀장 최O<span class="descri_cursor1"></span></h4>
-                                    <p>"야근에 이렇게 적극적인 인턴은 입사 2년 이후 처음이다."<span class="descri_cursor1"></span></p>
+                                    <h4><span class="descri_author">강남 패스트뷰 광고팀 팀장 최O</span><span class="descri_cursor n1"></span></h4>
+                                    <p><span class="descri_content">"야근에 이렇게 적극적인 인턴은 입사 2년 이후 처음이다."</span><span class="descri_cursor n2"></span></p>
                                 </div>
 
-                                <div class="descri_gauge">
-                                    <div class="gauge_current_num">01</div>
-                                    <div class="gauge">
-                                        <div class="gauge_entire"></div>
-                                        <div class="gauge_current"></div>
-                                    </div>
-                                    <div class="current_num">02</div>
-                                    <div class="gauge_line"></div>
-                                    <div class="current_num">03</div>
-                                </div>
 
                                 <div class="descri_explain">
                                     <div class="explain_title">
@@ -244,20 +230,115 @@
                                     </div>
                                 </div>
 
+                                <div class="descri_gauge">
+                                    <dic class="current_num">
+                                        <div class="num n1">01</div>
+                                    </dic>
+                                    <div class="gauge">
+                                        <div class="gauge_entire">
+                                            <div class="gauge_current"></div>
+
+                                        </div>
+                                    </div>
+                                    <div class="rest_num">
+                                        <div class="num n2">02</div>
+                                        <div class="gauge_line"></div>
+                                        <div class="num n3">03</div>
+                                    </div>
+
+                                </div>
+
                             </div>
                         </div>
                     </div>
                     
 
                 </div>
-
             </div>
 
             <div class="main_myspecs" id="main_2">
+                <div class="main_h2">
+                    <div class="nyan_zone nyan_zone_h2">
+                        <div class="title_trace_area">
+                            <img src="./img/main/title_trace.png" alt="고양이 발자국">
+                            <img src="./img/main/title_trace.png" alt="고양이 발자국">
+                            <img src="./img/main/title_trace.png" alt="고양이 발자국">
+                        </div>
+                        <div class="title_text_area">
+                            <h2>My Specs</h2>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="my_specs_back">
+                    <div class="ms_back n1">
+                        <img src="./img/main/my_specs_back_1.png" alt="백1">
+                        <img src="./img/main/my_specs_back_1_line.png" alt="백라인1">
+                    </div>
+
+                    <div class="ms_back n2">
+                        <img src="./img/main/my_specs_back_2.png" alt="백2">
+                        <img src="./img/main/my_specs_back_2_line.png" alt="백라인1">
+                    </div>
+
+                    <div class="ms_back n3">
+                        <img src="./img/main/my_specs_back_3.png" alt="백3">
+                        <img src="./img/main/my_specs_back_3_line.png" alt="백라인1">
+                    </div>
+                </div>
+
+                <div class="my_specs_contents">
+                    <div class="ms_contents_img">
+                        <img src="./img/main/my_specs_kitty.png" alt="스펙 고양이">
+                        <div class="ms_contents_txt n1">
+                            <h4>Name</h4>
+                            <p>김서용(Seo Yong Kim)</p>
+                            <h4>Birthday</h4>
+                            <p>19970909</p>
+                        </div>
+
+                        <div class="ms_contents_txt n2">
+                            <h4>E-mail</h4>
+                            <p>nonwhiskerscat<br>gamil.com</p>
+                            <h4>Cellpone</h4>
+                            <p>01090849222</p>
+                        </div>
+
+                        <div class="ms_contents_txt n3">
+                            <h4>Education</h4>
+                            <h5>2022.08 ~ 2023.01</h5>
+                            <p>방송국제교육원<br>웹퍼블리싱&프론트앤드</p>
+                        </div>
+
+                        <div class="ms_contents_txt n4">
+                            <h4>Education</h4>
+                            <h5>2016.02 ~ 2022.08</h5>
+                            <p>아주대학교 미디어학과<br>심화과정 졸업</p>
+                        </div>
+
+                        <div class="ms_contents_txt n5">
+                            <h4>Career</h4>
+                            <h5>2021.07 ~ 2022.08</h5>
+                            <p>강남 패스트뷰<br>디자인팀 인턴</p>
+                        </div>
+
+                        <div class="ms_contents_txt n6">
+                            <h4>Career</h4>
+                            <h5>2021.12 ~ 2022.02</h5>
+                            <p>강남 패스트뷰<br>광고팀 인턴</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="my_specs_urban">
+                    <img src="./img/main/my_specs_urban.png" alt="도시">
+                </div>
+
 
             </div>
 
             <div class="main_myskills" id="main_3">
+
 
             </div>
 
