--- a/index.html
+++ b/index.html
@@ -377,7 +377,9 @@
                     </ul>
 
                     <div class="mk_main">
-                        <img src="./img/main/my_skills_kitty.png" alt="스킬 고양이">
+                        <div class="mk_skills_kitty">
+                            <img src="./img/main/my_skills_kitty.png" alt="스킬 고양이">
+                        </div>
 
                         <div class="mk_skills_big">
                             <div class="mk_skills_img">
@@ -414,6 +416,15 @@
 
 
 
+                        </div>
+                    </div>
+
+                    <div class="mk_icons">
+                        <div class="icons_flex">
+                            <div class="mk_skill1">
+                                
+                            </div>
+                            
                         </div>
                     </div>
 
