--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
                     </ul>
 
                     <div class="nyan_zone">
-                        <div class="proj_web">
+                        <div class="projs proj_web">
                             <div class="proj_kopc">
                                 <div class="proj_flex">
                                     <div class="proj_photo">
