--- a/index.html
+++ b/index.html
@@ -495,7 +495,13 @@
                             </div>
                         </div>
 
-                        <img class="mk_skills_kitty" src="./img/main/my_skills_kitty.png" alt="스킬 고양이">
+                        <div class="mk_kitty_entire">
+                            <img class="mk_skills_kitty" src="./img/main/my_skills_kitty.png" alt="스킬 고양이">
+                            <p>Z</p>
+                            <p>Z</p>
+                            <p>Z</p>
+                        </div>
+                        
                     </div>
 
                     <div class="nyan_zone">
