--- a/index.html
+++ b/index.html
@@ -181,15 +181,18 @@
 
             <div class="main_aboutme" id="main_1">
                 <div class="main_h2">
-                    <div class="nyan_zone nyan_zone_h2">
-                        <div class="title_trace_area">
-                            <img src="./img/main/title_trace.png" alt="고양이 발자국">
-                            <img src="./img/main/title_trace.png" alt="고양이 발자국">
-                            <img src="./img/main/title_trace.png" alt="고양이 발자국">
+                    <div class="nyan_zone">
+                        <div class="nyan_h2_flex">
+                            <div class="title_trace_area">
+                                <img src="./img/main/title_trace.png" alt="고양이 발자국">
+                                <img src="./img/main/title_trace.png" alt="고양이 발자국">
+                                <img src="./img/main/title_trace.png" alt="고양이 발자국">
+                            </div>
+                            <div class="title_text_area">
+                                <h2>About Me</h2>
+                            </div>
                         </div>
-                        <div class="title_text_area">
-                            <h2>About Me</h2>
-                        </div>
+
                     </div>
 
                     <div class="nyan_zone">
@@ -310,14 +313,16 @@
 
             <div class="main_myspecs" id="main_2">
                 <div class="main_h2">
-                    <div class="nyan_zone nyan_zone_h2">
-                        <div class="title_trace_area">
-                            <img src="./img/main/title_trace.png" alt="고양이 발자국">
-                            <img src="./img/main/title_trace.png" alt="고양이 발자국">
-                            <img src="./img/main/title_trace.png" alt="고양이 발자국">
-                        </div>
-                        <div class="title_text_area">
-                            <h2>My Specs</h2>
+                    <div class="nyan_zone">
+                        <div class="nyan_h2_flex">
+                            <div class="title_trace_area">
+                                <img src="./img/main/title_trace.png" alt="고양이 발자국">
+                                <img src="./img/main/title_trace.png" alt="고양이 발자국">
+                                <img src="./img/main/title_trace.png" alt="고양이 발자국">
+                            </div>
+                            <div class="title_text_area">
+                                <h2>My Specs</h2>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -433,14 +438,16 @@
 
             <div class="main_myskills" id="main_3">
                 <div class="main_h2">
-                    <div class="nyan_zone nyan_zone_h2">
-                        <div class="title_trace_area">
-                            <img src="./img/main/title_trace.png" alt="고양이 발자국">
-                            <img src="./img/main/title_trace.png" alt="고양이 발자국">
-                            <img src="./img/main/title_trace.png" alt="고양이 발자국">
-                        </div>
-                        <div class="title_text_area">
-                            <h2>My Skills</h2>
+                    <div class="nyan_zone">
+                        <div class="nyan_h2_flex">
+                            <div class="title_trace_area">
+                                <img src="./img/main/title_trace.png" alt="고양이 발자국">
+                                <img src="./img/main/title_trace.png" alt="고양이 발자국">
+                                <img src="./img/main/title_trace.png" alt="고양이 발자국">
+                            </div>
+                            <div class="title_text_area">
+                                <h2>My Skills</h2>
+                            </div>
                         </div>
                     </div>
                 </div>    
@@ -536,14 +543,16 @@
 
             <div class="main_projects" id="main_4">
                 <div class="main_h2">
-                    <div class="nyan_zone nyan_zone_h2">
-                        <div class="title_trace_area">
-                            <img src="./img/main/title_trace.png" alt="고양이 발자국">
-                            <img src="./img/main/title_trace.png" alt="고양이 발자국">
-                            <img src="./img/main/title_trace.png" alt="고양이 발자국">
-                        </div>
-                        <div class="title_text_area">
-                            <h2>Project</h2>
+                    <div class="nyan_zone">
+                        <div class="nyan_h2_flex">
+                            <div class="title_trace_area">
+                                <img src="./img/main/title_trace.png" alt="고양이 발자국">
+                                <img src="./img/main/title_trace.png" alt="고양이 발자국">
+                                <img src="./img/main/title_trace.png" alt="고양이 발자국">
+                            </div>
+                            <div class="title_text_area">
+                                <h2>Projects</h2>
+                            </div>
                         </div>
                     </div>
                 </div>  
@@ -572,14 +581,16 @@
 
             <div class="main_contactme" id="main_5">
                 <div class="main_h2">
-                    <div class="nyan_zone nyan_zone_h2">
-                        <div class="title_trace_area">
-                            <img src="./img/main/title_trace.png" alt="고양이 발자국">
-                            <img src="./img/main/title_trace.png" alt="고양이 발자국">
-                            <img src="./img/main/title_trace.png" alt="고양이 발자국">
-                        </div>
-                        <div class="title_text_area">
-                            <h2>Contact Me</h2>
+                    <div class="nyan_zone">
+                        <div class="nyan_h2_flex">
+                            <div class="title_trace_area">
+                                <img src="./img/main/title_trace.png" alt="고양이 발자국">
+                                <img src="./img/main/title_trace.png" alt="고양이 발자국">
+                                <img src="./img/main/title_trace.png" alt="고양이 발자국">
+                            </div>
+                            <div class="title_text_area">
+                                <h2>Contact Me</h2>
+                            </div>
                         </div>
                     </div>
                 </div> 
