--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="./css/svg.css">
     <link rel="stylesheet" href="./css/tiles.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="./js/design_note.js"></script>
     <script src="./js/button.js"></script>
     <script src="./js/svg.js"></script>
     <script src="./js/index.js" defer></script>
