--- a/index.html
+++ b/index.html
@@ -13,21 +13,10 @@
     <title>키드캣 냥토피아::Kidcat Nyantopia</title>
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Pacifico" />
     <link rel="shortcut icon" href="./img/favicon_og/favicon.png"> <!--파비콘 이미지 링크-->
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/responsive.css">
-    <link rel="stylesheet" href="./css/webfont.css">
-    <link rel="stylesheet" href="./css/scroll.css">
-    <link rel="stylesheet" href="./css/animation.css">
-    <link rel="stylesheet" href="./css/header.css">
-    <link rel="stylesheet" href="./css/footer.css">
     <link rel="stylesheet" href="./css/index.css">
-    <link rel="stylesheet" href="./css/javascript.css">
-    <link rel="stylesheet" href="./css/svg.css">
-    <link rel="stylesheet" href="./css/tiles.css">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="./js/design_note.js"></script>
-    <script src="./js/button.js"></script>
     <script src="./js/svg.js"></script>
+    <script src="./js/design_note.js"></script>
     <script src="./js/index.js" defer></script>
 </head>
 <body>
@@ -574,6 +563,7 @@
                         <div class="projs">
 
                         </div>
+
                     </div>
                 </div>  
 
@@ -687,6 +677,10 @@
                             </div>
                         </div>
                     </div>
+                </div>
+
+                <div class="design_note">
+                            
                 </div>
         </main>
         <footer>
