--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="Author" content="Seoyong Kim">
     <meta name="title" property="og:title" content="Kidcat Nyantopia">
     <meta name="images" property="og:image" content="#"> <!--OG 이미지 링크-->
-    <meta name="description" property="og:description" content="Kidcat Nyantopia에 접속하신 것을 환영합니다.">
+    <meta name="description" property="og:description" content="수염 없는 고양이 Kidcat의 Nyantopia에 온 것을 진심으로 환영한다냥!">
     <meta name="type" property="og:type" content="article">
     <title>키드캣 냥토피아::Kidcat Nyantopia</title>
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Pacifico" />
@@ -191,7 +191,6 @@
                                 <div class="about_me_back">
                                     <img class="about_me_base" src="./img/main/about_me_back.png" alt="어바웃 미 배경">
                                     <img class="about_me_base" src="./img/main/about_me_line.png" alt="어바웃 미 라인">
-                                    <!-- <img class="Seoyong no" src="./img/main/about_me_seoyong.png" class="no" alt="어바웃 미 서용"> -->
 
                                     <div class="about_me_front">
                                         <img src="./img/main/about_me_kitty.png" alt="어바웃 미 고양이">
