--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
                                 </div>
 
                                 <div class="descri_comment">
-                                    <h4><span class="descri_author">강남 패스트뷰 광고팀 팀장 최O</span><span class="descri_cursor n1"></span></h4>
-                                    <p><span class="descri_content">"야근에 이렇게 적극적인 인턴은 <br>입사 2년 이후 처음이다."</span><span class="descri_cursor n2"></span></p>
+                                    <h4><span class="descri_author">강남 패스트뷰 광고팀 팀장 최O</span></h4>
+                                    <p><span class="descri_content">"야근에 이렇게 적극적인 인턴은 <br>입사 2년 이후 처음이다."</span></p>
                                 </div>
 
 
@@ -271,7 +271,7 @@
                                 </div>
                                 </div>
                                 
-                                <div class="descri_gauge">                                    
+                                <div class="descri_gauge">                            
                                     <div class="gauge_toggle">
                                         <img src="./img/main/about_me_pause.png" alt="재생/정지">
                                     </div>
