--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                 </div>
 
                 <div class="my_specs_urban">
-                    <img src="./img/main/my_specs_urban.png" alt="도시">
+                    <img src="./img/main/msurbanpc.png" alt="도시">
                     <div class="urban_gradient"></div>
                 </div>
 
