--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
         
                     <div class="menu_gnb_sh">
                         <ul class="gnb_main">
-                            <li><span class="li_img"></span><p>Intro</p></li>
-                            <li><span class="li_img"></span><p>About Me</p></li>
-                            <li><span class="li_img"></span><p>My Specs</p></li>
-                            <li><span class="li_img"></span><p>My Skills</p></li>
-                            <li><span class="li_img"></span><p>Project</p></li>
-                            <li><span class="li_img"></span><p>Contact Me</p></li>
+                            <li><span class="li_img"></span><p class="li_txt">Intro</p></li>
+                            <li><span class="li_img"></span><p class="li_txt">About Me</p></li>
+                            <li><span class="li_img"></span><p class="li_txt">My Specs</p></li>
+                            <li><span class="li_img"></span><p class="li_txt">My Skills</p></li>
+                            <li><span class="li_img"></span><p class="li_txt">Project</p></li>
+                            <li><span class="li_img"></span><p class="li_txt">Contact Me</p></li>
                         </ul>
     
                         <div class="gnb_base">
@@ -83,12 +83,12 @@
 
                 <div class="gnb_list">
                     <ul>
-                        <li><span class="li_img"></span><p>Intro</p></li>
-                        <li><span class="li_img"></span><p>About Me</p></li>
-                        <li><span class="li_img"></span><p>My Specs</p></li>
-                        <li><span class="li_img"></span><p>My Skills</p></li>
-                        <li><span class="li_img"></span><p>Project</p></li>
-                        <li><span class="li_img"></span><p>Contact Me</p></li>
+                        <li><span class="li_img"></span><p class="li_txt">Intro</p></li>
+                        <li><span class="li_img"></span><p class="li_txt">About Me</p></li>
+                        <li><span class="li_img"></span><p class="li_txt">My Specs</p></li>
+                        <li><span class="li_img"></span><p class="li_txt">My Skills</p></li>
+                        <li><span class="li_img"></span><p class="li_txt">Project</p></li>
+                        <li><span class="li_img"></span><p class="li_txt">Contact Me</p></li>
                     </ul>
                 </div>
 
