--- a/index.html
+++ b/index.html
@@ -54,12 +54,37 @@
         
                     <div class="menu_gnb_sh">
                         <ul class="gnb_main">
-                            <li><span class="li_img"></span><p class="li_txt">Intro</p></li>
-                            <li><span class="li_img"></span><p class="li_txt">About Me</p></li>
-                            <li><span class="li_img"></span><p class="li_txt">My Specs</p></li>
-                            <li><span class="li_img"></span><p class="li_txt">My Skills</p></li>
-                            <li><span class="li_img"></span><p class="li_txt">Project</p></li>
-                            <li><span class="li_img"></span><p class="li_txt">Contact Me</p></li>
+                            <li>
+                                <div class="sh_li_flex">
+                                    <span class="li_img"></span><p class="li_txt">Intro</p>
+                                </div> 
+                            </li>
+                            <li>
+                                <div class="sh_li_flex">
+                                    <span class="li_img"></span><p class="li_txt">About Me</p>
+                                </div> 
+                            </li>
+                            <li>
+                                <div class="sh_li_flex">
+                                    <span class="li_img"></span><p class="li_txt">My Specs</p>
+                                </div> 
+                            </li>
+                            <li>
+                                <div class="sh_li_flex">
+                                    <span class="li_img"></span><p class="li_txt">My Skills</p>
+                                </div> 
+                            </li>
+                            <li>
+                                <div class="sh_li_flex">
+                                    <span class="li_img"></span><p class="li_txt">Project<span class="gnb_sh_huge">Me</span></p>
+                                </div> 
+                            </li>
+                            <li>
+                                <div class="sh_li_flex">
+                                    <span class="li_img"></span><p class="li_txt">Contact <span class="gnb_sh_huge">Me</span></p>
+                                </div> 
+                            </li>
+
                         </ul>
     
                         <div class="gnb_base">
@@ -616,9 +641,10 @@
                                     </button>
 
                                     <button class="btn_question">
-                                        <p class="btn_txt"><span class="btn_mob">질문하기</span><span class="btn_pc">Contact Me 실행</span>
-                                            <span class="btn_after"><span class="btn_mob">질문하기</span><span class="btn_pc">Contact Me 실행</span></span>
-                                        </p>
+                                        <p class="btn_txt"><span class="btn_mob">질문하기</span><span class="btn_pc">Contact Me 실행</span></p>
+                                            <span class="btn_after">
+                                                <p><span class="btn_mob">질문하기</span><span class="btn_pc">Contact Me 실행</span></p>
+                                            </span>
                                     </button>
 
                                 </div>
