--- a/index.html
+++ b/index.html
@@ -387,6 +387,10 @@
 
                 </div>
 
+                <div class="mk_click">
+                    <p class="mk_click_p">아이콘을 아무거나 클릭하세요!</p>
+                </div>
+
                 <div class="mk_main">
                     <div class="mk_skills_kitty">
                         <div class="mk_skills_big">
@@ -441,8 +445,6 @@
                     </div>
 
 
-
-
                     <div class="nyan_zone">
                         <div class="mk_icons">
                             <div class="mk_skill_zone mcl">
@@ -456,6 +458,8 @@
                             <div class="mk_skill_zone mgl no">
                             </div>
                         </div>
+
+
                     </div>
 
                 </div>
