--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="Description" content="Kidcat Nyantopia">
     <meta name="Author" content="Seoyong Kim">
     <meta name="title" property="og:title" content="Kidcat Nyantopia">
-    <meta name="images" property="og:image" content="./img/favicon_og/og.png"> <!--OG 이미지 링크-->
+    <meta name="images" property="og:image" content="./img/favicon_og/og_img.png"> <!--OG 이미지 링크-->
     <meta name="description" property="og:description" content="수염 없는 고양이 Kidcat의 Nyantopia에 온 것을 진심으로 환영한다냥!">
     <meta name="type" property="og:type" content="article">
     <title>키드캣 냥토피아::Kidcat Nyantopia</title>
