--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             </li>
                             <li>
                                 <div class="sh_li_flex">
-                                    <span class="li_img"></span><p class="li_txt">Project<span class="gnb_sh_huge">Me</span></p>
+                                    <span class="li_img"></span><p class="li_txt">Project</p>
                                 </div> 
                             </li>
                             <li>
