--- a/index.html
+++ b/index.html
@@ -331,8 +331,8 @@
                             <div class="ms_contents_txt n5">
                                 <div class="ms_kitty_txt">
                                     <h4>Career I</h4>
-                                    <h5>2021.06 ~ 2022.07</h5>
-                                    <p>강남 패스트뷰<br>디자인팀 인턴</p>
+                                    <h5>2021.06 ~ 2021.08</h5>
+                                    <p>강남 패스트뷰<br>디자인&광고팀</p>
                                 </div>
 
                                 <div class="ms_contents_fw"></div>
@@ -344,8 +344,8 @@
                             <div class="ms_contents_txt n6">
                                 <div class="ms_kitty_txt">
                                     <h4>Career II</h4>
-                                    <h5>2021.07 ~ 2021.08</h5>
-                                    <p>강남 패스트뷰<br>광고팀 인턴</p>
+                                    <h5>2023.03 ~ 재직중</h5>
+                                    <p>Nippon IPFS<br>프론트엔드 개발자</p>
                                 </div>
 
                                 <div class="ms_contents_fw"></div>
