--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                                 <div class="ms_kitty_txt">
                                     <h4>Career II</h4>
                                     <h5>2023.03 ~ 재직중</h5>
-                                    <p>Nippon IPFS<br>프론트엔드 개발자</p>
+                                    <p>Nihon IPFS<br>프론트엔드 개발자</p>
                                 </div>
 
                                 <div class="ms_contents_fw"></div>
