이직으로인한포트폴리오수정

--- a/index.html
+++ b/index.html
@@ -344,8 +344,8 @@
                             <div class="ms_contents_txt n6">
                                 <div class="ms_kitty_txt">
                                     <h4>Career II</h4>
-                                    <h5>2023.03 ~ 재직중</h5>
-                                    <p>Nihon IPFS<br>프론트엔드 개발자</p>
+                                    <h5>2023.04 ~ 재직중</h5>
+                                    <p>동아닷컴<br>웹 프로그래머</p>
                                 </div>
 
                                 <div class="ms_contents_fw"></div>
