--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
                                     <h5>2021.06 ~ 2021.08</h5>
                                     <p>강남 패스트뷰<br>디자인&광고팀</p>
                                 </div>
-
+    
                                 <div class="ms_contents_fw"></div>
                             </div>
                         </div>
@@ -345,7 +345,7 @@
                                 <div class="ms_kitty_txt">
                                     <h4>Career II</h4>
                                     <h5>2023.04 ~ 재직 중</h5>
-                                    <p>동아닷컴<br>웹 프로그래머</p>
+                                    <p>동아닷컴<br>CTS팀 사원</p>
                                 </div>
 
                                 <div class="ms_contents_fw"></div>
